Create process item 'jo_Inventory_master_service_now_extract_5thMay' at path 'Inventory_POC' in project 'POC'     Save project 'POC'

--- a/POC/talend.project
+++ b/POC/talend.project
@@ -999,6 +999,54 @@
       <relatedItems xmi:id="_80RDwFT4EeiNAb-l-jSt3Q" id="Jo_inventory_source_checkTstandardizerow_1" version="Latest" type="routine"/>
       <relatedItems xmi:id="_Z__uYFUKEeiNAb-l-jSt3Q" id="Jo_inventory_source_checkTstandardizerow_2" version="Latest" type="routine"/>
     </ItemsRelations>
+    <ItemsRelations xmi:id="_4oCqMFUUEeigcqgb9ZU9AA">
+      <baseItem xmi:id="_4oCqMVUUEeigcqgb9ZU9AA" id="_zexacFHLEeiNO6O3Zyk5fw" version="2.0" type="job"/>
+      <relatedItems xmi:id="_4oCqMlUUEeigcqgb9ZU9AA" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqM1UUEeigcqgb9ZU9AA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqNFUUEeigcqgb9ZU9AA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqNVUUEeigcqgb9ZU9AA" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqNlUUEeigcqgb9ZU9AA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqN1UUEeigcqgb9ZU9AA" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqOFUUEeigcqgb9ZU9AA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqOVUUEeigcqgb9ZU9AA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqOlUUEeigcqgb9ZU9AA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqO1UUEeigcqgb9ZU9AA" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqPFUUEeigcqgb9ZU9AA" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqPVUUEeigcqgb9ZU9AA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqPlUUEeigcqgb9ZU9AA" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqP1UUEeigcqgb9ZU9AA" id="DataQualityDependencies" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqQFUUEeigcqgb9ZU9AA" id="TalendStringUtil" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqQVUUEeigcqgb9ZU9AA" id="MDM" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqQlUUEeigcqgb9ZU9AA" id="__OiyQEz_EeihBPD6I1_SrQ - CSV_DS3_GTOMS" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqQ1UUEeigcqgb9ZU9AA" id="_E1Du0E0AEeihBPD6I1_SrQ - CSV_DS3_BILLING" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqRFUUEeigcqgb9ZU9AA" id="_zNbw0Ez_EeihBPD6I1_SrQ - CSV_DS3_GRN" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqRVUUEeigcqgb9ZU9AA" id="_reQeoEz_EeihBPD6I1_SrQ - CSV_DS3_SOVR" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqRlUUEeigcqgb9ZU9AA" id="_2VZXkDv5EeiSndQzlxS5Cg - CSV_EVO_NPIDS_AML_NPIDS" version="Latest" type="schema"/>
+    </ItemsRelations>
+    <ItemsRelations xmi:id="_4oCqR1UUEeigcqgb9ZU9AA">
+      <baseItem xmi:id="_4oCqSFUUEeigcqgb9ZU9AA" id="_zexacFHLEeiNO6O3Zyk5fw" version="3.0" type="job"/>
+      <relatedItems xmi:id="_4oCqSVUUEeigcqgb9ZU9AA" id="SQLike" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqSlUUEeigcqgb9ZU9AA" id="Numeric" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqS1UUEeigcqgb9ZU9AA" id="TalendString" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqTFUUEeigcqgb9ZU9AA" id="DataMasking" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqTVUUEeigcqgb9ZU9AA" id="DataOperation" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqTlUUEeigcqgb9ZU9AA" id="DqStringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqT1UUEeigcqgb9ZU9AA" id="StringHandling" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqUFUUEeigcqgb9ZU9AA" id="TalendDataGenerator" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqUVUUEeigcqgb9ZU9AA" id="TalendDate" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqUlUUEeigcqgb9ZU9AA" id="DataQuality" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqU1UUEeigcqgb9ZU9AA" id="Mathematical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqVFUUEeigcqgb9ZU9AA" id="Relational" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqVVUUEeigcqgb9ZU9AA" id="DQTechnical" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqVlUUEeigcqgb9ZU9AA" id="DataQualityDependencies" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqV1UUEeigcqgb9ZU9AA" id="TalendStringUtil" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqWFUUEeigcqgb9ZU9AA" id="MDM" version="Latest" type="routine"/>
+      <relatedItems xmi:id="_4oCqWVUUEeigcqgb9ZU9AA" id="__OiyQEz_EeihBPD6I1_SrQ - CSV_DS3_GTOMS" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqWlUUEeigcqgb9ZU9AA" id="_E1Du0E0AEeihBPD6I1_SrQ - CSV_DS3_BILLING" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqW1UUEeigcqgb9ZU9AA" id="_zNbw0Ez_EeihBPD6I1_SrQ - CSV_DS3_GRN" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqXFUUEeigcqgb9ZU9AA" id="_reQeoEz_EeihBPD6I1_SrQ - CSV_DS3_SOVR" version="Latest" type="schema"/>
+      <relatedItems xmi:id="_4oCqXVUUEeigcqgb9ZU9AA" id="_2VZXkDv5EeiSndQzlxS5Cg - CSV_EVO_NPIDS_AML_NPIDS" version="Latest" type="schema"/>
+    </ItemsRelations>
     <migrationTask xmi:id="_NWhc8DcwEei50Npc-g0ZOA" id="org.talend.repository.localprovider.RemoveRoutineFolderTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_NWhc8TcwEei50Npc-g0ZOA" id="org.talend.repository.localprovider.model.migration.ChangeXmiSerialization" breaks="5.1.1" version="5.1.2" status="noimpact"/>
     <migrationTask xmi:id="_NWhc8jcwEei50Npc-g0ZOA" id="org.talend.repository.model.migration.CleanFoldersMigrationTask" breaks="5.1.1" version="5.1.2" status="noimpact"/>
