--- a/POC/process/Inventory_POC/jo_Inventory_master_service_now_extract_5thMay_3.0.properties
+++ b/POC/process/Inventory_POC/jo_Inventory_master_service_now_extract_5thMay_3.0.properties
@@ -2,18 +2,18 @@
 <xmi:XMI xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:TalendProperties="http://www.talend.org/properties">
   <TalendProperties:Property xmi:id="_8XpacEz7Eeivhs12XqiO2A" id="_zexacFHLEeiNO6O3Zyk5fw" label="jo_Inventory_master_service_now_extract_5thMay" version="3.0" statusCode="" item="_8Xpackz7Eeivhs12XqiO2A" displayName="jo_Inventory_master_service_now_extract_5thMay">
     <author href="../../talend.project#_VIVIYTdcEeigq5kOYZXrwg"/>
-    <additionalProperties xmi:id="_M4zPJE4BEeinV71uDKQkBA" key="import_product_fullname" value="Talend Open Studio for Data Integration"/>
-    <additionalProperties xmi:id="_M4zPJU4BEeinV71uDKQkBA" key="import_product_version" value="6.4.1.20170623_1246"/>
-    <additionalProperties xmi:id="_M4zPJk4BEeinV71uDKQkBA" key="import_date" value="2018-05-02T17:36:10.160+0530"/>
+    <additionalProperties xmi:id="_M4zPJE4BEeinV71uDKQkBA" key="import_product_fullname" value="Talend Integration Cloud Hybrid Edition"/>
+    <additionalProperties xmi:id="_M4zPJU4BEeinV71uDKQkBA" key="import_product_version" value="6.5.1.20180116_1512"/>
+    <additionalProperties xmi:id="_M4zPJk4BEeinV71uDKQkBA" key="import_date" value="2018-05-11T17:44:40.023+0530"/>
     <additionalProperties xmi:id="_M4zPJ04BEeinV71uDKQkBA" key="created_product_fullname" value="Talend Integration Cloud Hybrid Edition"/>
     <additionalProperties xmi:id="_M4zPKE4BEeinV71uDKQkBA" key="created_product_version" value="6.5.1.20180116_1512"/>
     <additionalProperties xmi:id="_M4zPKU4BEeinV71uDKQkBA" key="created_date" value="2018-05-07T13:24:01.077+0530"/>
     <additionalProperties xmi:id="_M4zPKk4BEeinV71uDKQkBA" key="modified_product_fullname" value="Talend Integration Cloud Hybrid Edition"/>
     <additionalProperties xmi:id="_M4zPK04BEeinV71uDKQkBA" key="modified_product_version" value="6.5.1.20180116_1512"/>
-    <additionalProperties xmi:id="_M4zPLE4BEeinV71uDKQkBA" key="modified_date" value="2018-05-07T18:12:07.924+0530"/>
+    <additionalProperties xmi:id="_M4zPLE4BEeinV71uDKQkBA" key="modified_date" value="2018-05-11T16:14:14.192+0530"/>
   </TalendProperties:Property>
-  <TalendProperties:ItemState xmi:id="_zfcI0FHLEeiNO6O3Zyk5fw" path="Inventory_POC"/>
-  <TalendProperties:ProcessItem xmi:id="_8Xpackz7Eeivhs12XqiO2A" property="_8XpacEz7Eeivhs12XqiO2A" state="_zfcI0FHLEeiNO6O3Zyk5fw">
+  <TalendProperties:ItemState xmi:id="_4l8_gFUUEeigcqgb9ZU9AA" path="Inventory_POC"/>
+  <TalendProperties:ProcessItem xmi:id="_8Xpackz7Eeivhs12XqiO2A" property="_8XpacEz7Eeivhs12XqiO2A" state="_4l8_gFUUEeigcqgb9ZU9AA">
     <process href="jo_Inventory_master_service_now_extract_5thMay_3.0.item#/"/>
   </TalendProperties:ProcessItem>
 </xmi:XMI>
